# tensorrt-practice

./: .gitignore  AGENTS.md  CMakeLists.txt  pyproject.toml
.github/skills/add-trt-module/: SKILL.md
.github/skills/git-commit-zh/: SKILL.md
.github/skills/git-commit-zh/references/: commit-convention.md
.github/skills/jetson-python-env-setup/: SKILL.md
.github/skills/jetson-python-env-setup/scripts/: jetson_pytorch_probe.sh  verify_torch_cuda.py
docs/: dependency-management.md  python-environment.md
models/: README.md
scripts/: trtexec_export.sh
src/: CMakeLists.txt
src/googlenet/: CMakeLists.txt  export_googlenet_onnx.py  main.cpp  tensorrt_module.cpp  tensorrt_module.hpp
src/googlenet/models/: README.md
src/lenet/: CMakeLists.txt  export_lenet5_onnx.py  main.cpp
src/lenet/models/: README.md
src/mlp/: CMakeLists.txt  generate_mlp_onnx.py  logging.h  main.cpp
src/mlp/models/: README.md
src/resnet/: CMakeLists.txt  compare_trt_pytorch.py  export_resnet50_onnx.py  main.cpp  tensorrt_module.cpp  tensorrt_module.hpp
src/resnet/models/: README.md
src/yolov5/: CMakeLists.txt  logging.h  main.cpp  tensorrt_module.cpp  tensorrt_module.hpp  utils.cpp  utils.hpp  videotest.cpp
src/yolov5/models/: README.md
